force-app/main/default/objects/OKR_Google_Review__c/OKR_Google_Review__c.object-meta.xml
<CustomObject>
    <label>Google Review</label>
    <nameField>
        <label>Google Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>