force-app/main/default/objects/OKR_Google_Review__c/fields/Google_Rating__c.field-meta.xml
<CustomField>
    <fullName>Google_Rating__c</fullName>
    <label>Google Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>