force-app/main/default/objects/OKR_Google_Review__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <label>Reviewer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>